# slm_tool

./: Cargo.toml  README.md
crates/code-search/: Cargo.toml
crates/code-search/src/: grep.rs  lib.rs  ranking.rs  tantivy_index.rs
crates/docs-rag/: Cargo.toml
crates/docs-rag/src/: chunking.rs  embeddings.rs  lib.rs  search.rs
crates/evals/: Cargo.toml
crates/evals/src/: lib.rs  metrics.rs  runner.rs  tasks.rs
crates/git-tools/: Cargo.toml
crates/git-tools/src/: blame.rs  diff.rs  lib.rs  log.rs  status.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs
crates/mcp-server/src/protocol/: mod.rs
crates/mcp-server/src/tools/: mod.rs
crates/safety/: Cargo.toml
crates/safety/src/: lib.rs  paths.rs  policy.rs  secrets.rs
crates/symbol-index/: Cargo.toml
crates/symbol-index/src/: lib.rs  parser.rs  references.rs  symbols.rs
crates/symbol-index/src/languages/: mod.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: allowlist.rs  commands.rs  lib.rs  output.rs
crates/workspace-index/: Cargo.toml
crates/workspace-index/src/: crawler.rs  lib.rs  metadata.rs  watcher.rs
