[workspace]
members = [
    "crates/mcp-server",
    "crates/workspace-index",
    "crates/code-search",
    "crates/symbol-index",
    "crates/docs-rag",
    "crates/verifier",
    "crates/git-tools",
    "crates/safety",
    "crates/evals",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP protocol
rmcp = { version = "1.7", features = ["server", "macros", "schemars", "transport-io"] }

# JSON Schema generation (required by rmcp tool macros)
schemars = { version = "1.0", features = ["chrono04"] }

# File system
ignore = "0.4"
walkdir = "2"

# Pattern matching
regex = "1"
glob = "0.3"

# Hashing
blake3 = "1"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# Search
tantivy = "0.26"

# Tree-sitter
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"

# Git
git2 = { version = "0.21", default-features = false }

# Utilities
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
