[package]
name = "code-search"
version = "0.1.0"
edition = "2021"
description = "Tantivy-based lexical search and grep for workspace code"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tantivy = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
