[package]
name = "git-tools"
version = "0.1.0"
edition = "2021"
description = "Git context tools: status, diff, blame, log, and commit search"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
