[package]
name = "safety"
version = "0.1.0"
edition = "2021"
description = "Path sandbox, secret protection, and policy enforcement for the MCP coding assistant"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
