[package]
name = "verifier"
version = "0.1.0"
edition = "2021"
description = "Allowlisted command runner for tests, typechecks, linters, and formatters"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
