[package]
name = "workspace-index"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed workspace file metadata index with incremental updates"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
